--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MAIL_USER = rohittondak38@gmail.com
 MAIL_HOST = smtp.gmail.com
 MAIL_PASS = inwkdljmtrgftdsh
+MAIL_PORT = 587  
 
 JWT_SECRET = "Rohit"
 
